--- a/djackets_vue/package.json
+++ b/djackets_vue/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.2.13",
     "vue-carousel": "^0.18.0",
     "vue-router": "^4.0.3",
+    "vue-social-auth": "^1.4.9",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
